--- a/css/styles.css
+++ b/css/styles.css
@@ -707,65 +707,65 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h2{
 }
 
 
-/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3){*/
-/*    position: absolute;*/
-/*    padding-left: 14vw;*/
-/*    padding-right: 14vw;*/
-/*    top: 75.7vh;*/
-/*    z-index: 1;*/
-/*}*/
-/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>hr{*/
-/*    position: absolute;*/
-/*    box-sizing: content-box;*/
-/*    height: 6px;*/
-/*    width: 125vh;*/
-/*    left: 15.49vh;*/
-/*    bottom: 45.09vh;*/
-/*    background-color: #00B4D8;*/
-/*}*/
+section:nth-child(4)>div:nth-child(2)>div:nth-child(3){
+    position: absolute;
+    padding-left: 14vw;
+    padding-right: 14vw;
+    top: 75.7vh;
+    z-index: 1;
+}
+section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>hr{
+    position: absolute;
+    box-sizing: content-box;
+    height: 6px;
+    width: 125vh;
+    left: 45.49vh;
+    bottom: 41.2vh;
+    background-color: #00B4D8;
+}
 
-/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>div>img{*/
-/*    position: absolute;*/
-/*    width: 8vh;*/
-/*    left: 140vh;*/
-/*    bottom: 47.7vh;*/
-/*}*/
+section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>div>img{
+    position: absolute;
+    width: 8vh;
+    left: 170vh;
+    bottom: 29.4vh;
+}
 
-/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h5{*/
-/*    width: 16vh;*/
-/*    position: absolute;*/
-/*    font-family: system-ui;*/
-/*    font-size: 3vh;*/
-/*    left: 117vh;*/
-/*    bottom: 74.9vh;*/
-/*}*/
+section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h5{
+    width: 16vh;
+    position: absolute;
+    font-family: system-ui;
+    font-size: 3vh;
+    left: 155vh;
+    bottom: 29.9vh;
+}
 
-/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>img{*/
-/*    position: absolute;*/
-/*    left: 101vh;*/
-/*    bottom: 7vh;*/
-/*    height: 12vh;*/
-/*    width: 12vh;*/
-/*    bottom: 62vh;*/
-/*}*/
+section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>img{
+    position: absolute;
+    left: 141vh;
+    bottom: 7vh;
+    height: 12vh;
+    width: 12vh;
+    bottom: 30vh;
+}
 
-/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h1{*/
-/*    width: 50vh;*/
-/*    font-size: 3vh;*/
-/*    font-family: system-ui;*/
-/*    position: absolute;*/
-/*    bottom: 86vh;*/
-/*    left: 18vh;*/
-/*}*/
+section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h1{
+    width: 50vh;
+    font-size: 3vh;
+    font-family: system-ui;
+    position: absolute;
+    bottom: 35vh;
+    left: 48vh;
+}
 
-/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h2{*/
-/*    width: 50vh;*/
-/*    font-size: 2vh;*/
-/*    font-family: system-ui,cursive;*/
-/*    position: absolute;*/
-/*    bottom: 87vh;*/
-/*    left: 28vh;*/
-/*}*/
+section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h2{
+    width: 50vh;
+    font-size: 2vh;
+    font-family: system-ui,cursive;
+    position: absolute;
+    bottom: 32vh;
+    left: 58vh;
+}
 
 /*section:nth-child(4)>div:nth-child(2)>div:nth-child(4){*/
 /*    position: absolute;*/
