--- a/css/styles.css
+++ b/css/styles.css
@@ -1067,6 +1067,10 @@ section:nth-child(6)>div:nth-child(1)>h3{
     transition: .9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
+.content-inner > * {
+    backface-visibility: hidden;
+    transition: .9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
 
 
 
