--- a/css/styles.css
+++ b/css/styles.css
@@ -1108,6 +1108,17 @@ section:nth-child(6)>div:nth-child(1)>h3{
     border-bottom:1px dotted;
 }
 
+.content-front  .cf-inner:before , .content-front  .cf-inner:after {
+    content:'';
+    position:absolute;
+    width:50px;
+    height:50px;
+    border-color: rgb(0, 0, 0);
+    z-index:1;
+}
+
+/*////////////////////////////////////////////*/
+
 
 
 
