--- a/css/styles.css
+++ b/css/styles.css
@@ -1146,6 +1146,16 @@ section:nth-child(6)>div:nth-child(1)>h3{
     z-index:2;
 }
 
+.content-back i {
+    font-size:54px;
+    position:relative;
+}
+.dec-icon {
+    position:relative;
+    display:inline-table;
+    width:80px;
+    height:80px;
+}
 
 
 
