--- a/css/styles.css
+++ b/css/styles.css
@@ -1213,6 +1213,24 @@ section:nth-child(6)>div:nth-child(1)>h3{
     font-family: 'Playfair Display', cursive;
 }
 
+.content-inner .cf-inner .inner h2:after {
+    content:'';
+    position:absolute;
+    top:-30px;
+    margin-left:-25px;
+    left:50%;
+    width:50px;
+    height:2px;
+}
+.content-inner .content-front h4{
+    display:inline-block;
+    color: #000000;
+    text-transform:uppercase;
+    font-size:12px;
+    letter-spacing:2px;
+    margin:0 4px;
+}
+
 
 
 
