--- a/css/styles.css
+++ b/css/styles.css
@@ -1012,6 +1012,7 @@ section:nth-child(5)>img:hover{
 section:nth-child(6){
     position: relative;
     width: 65vw;
+    height: 100vw;
     padding-left: 14vw;
     padding-right: 14vw;
 }
@@ -1241,13 +1242,26 @@ section:nth-child(6)>div:nth-child(1)>h3{
     position: absolute;
     top: 30vh;
     right: 50vh;
-    left: 86vh;
+    left: 86.3vh;
 }
 
 .col-md-3{
     position: absolute;
     top: 30vh;
     right: 8vw;
+}
+
+.col-md-4{
+    position:absolute;
+    top: 93vh;
+    left: 14vw;
+}
+
+.col-md-5{
+    position: absolute;
+    top: 93vh;
+    right: 50vh;
+    left: 86.3vh;
 }
 
 
