--- a/css/styles.css
+++ b/css/styles.css
@@ -1046,7 +1046,7 @@ section:nth-child(6)>div:nth-child(1)>h2{
 
 section:nth-child(6)>div:nth-child(1)>h3{
     width: 63vw;
-    font-family: Inter, " Thin";
+    font-family: 'Signika';
     font-size: 1.5vw;
     font-weight: 700;
     color: #0A0A0A;
