--- a/css/styles.css
+++ b/css/styles.css
@@ -1287,6 +1287,183 @@ section:nth-child(5)>img:hover{
 /*}*/
 
 
+section:nth-child(6){
+    position: relative;
+    height: 140vh;
+    width: 70vw;
+    padding-left: 14vw;
+    padding-right: 14vw;
+}
+
+section:nth-child(6)>h5{
+    width: 7vw;
+    font-family: Inter, SansSerif;
+    font-size: 1vw;
+    font-weight: 600;
+    color: #05BFDB;
+
+    position: absolute;
+    top: 10vh;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+section:nth-child(6)>h1{
+    width: 14vw;
+    font-family: 'Catamaran';
+    font-size: 3vw;
+    font-weight: 700;
+    color: #0A0A0A;
+
+    position: absolute;
+    top: 13vh;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+
+
+
+section:nth-child(6)>div{
+    width: 23.5vw;
+    height: 35vh;
+    background-color: white;
+    box-shadow: #D0D0D0 0px 4px 12px;
+    border-radius: 1vh;
+
+    position: absolute;
+    margin: auto;
+}
+
+section:nth-child(6)>div:hover{
+    box-shadow: #959393 0px 4px 12px;
+}
+
+
+
+section:nth-child(6)>div>h4{
+    font-family: 'Catamaran';
+    font-size: 1.5vw;
+    font-weight: 700;
+    color: #0A0A0A;
+
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 15vh;
+    margin: auto;
+}
+
+section:nth-child(6)>div>h3{
+    width: 20vw;
+    font-family: Inter, SansSerif;
+    font-size: 1vw;
+    font-weight: 600;
+    text-align: center;
+    color: #808080;
+
+    position: absolute;
+    top: 21vh;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+
+#box1{
+    top: 25vh;
+    left: 14vw;
+}
+
+#box1>img{
+    width: 20%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 4vh;
+    margin: auto;
+}
+
+#box2{
+    top: 25vh;
+    right: 0;
+    left: 0;
+}
+
+#box2>img{
+    width: 18%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 4.8vh;
+    margin: auto;
+}
+
+#box3{
+    top: 25vh;
+    right: 12vw;
+}
+
+#box3>img{
+    width: 20%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 4vh;
+    margin: auto;
+}
+
+
+
+
+
+#box4{
+    top: 61.5vh;
+    left: 14vw;
+}
+
+#box4>img{
+    width: 18%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 4vh;
+    margin: auto;
+}
+
+
+
+
+
+#box5{
+    top: 61.5vh;
+    right: 0;
+    left: 0;
+}
+
+#box5>img{
+    width: 16%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 4vh;
+    margin: auto;
+}
+
+#box6{
+    top: 61.5vh;
+    right: 14vw;
+}
+
+#box6>img{
+    width: 20%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 4vh;
+    margin: auto;
+}
 
 
 
