--- a/css/styles.css
+++ b/css/styles.css
@@ -1432,10 +1432,6 @@ section:nth-child(6)>div>h3{
     margin: auto;
 }
 
-
-
-
-
 #box5{
     top: 61.5vh;
     right: 0;
@@ -1464,6 +1460,11 @@ section:nth-child(6)>div>h3{
     top: 4vh;
     margin: auto;
 }
+
+
+/*--------------------------------------Project section-------------------------------------------------*/
+
+
 
 
 
