--- a/css/styles.css
+++ b/css/styles.css
@@ -1699,16 +1699,15 @@ section:nth-child(9)>h5{
 }
 
 section:nth-child(9)>h1{
-    width: 33.5vw;
+    width: 36vw;
     font-family: 'Catamaran';
     font-size: 3vw;
     font-weight: 700;
     color: #0A0A0A;
-
     position: absolute;
     top: 33vh;
     right: 0;
-    left: 0;
+    left: 7vw;
     margin: auto;
 }
 
@@ -1739,8 +1738,7 @@ section:nth-child(9)>div{
 
 
 section:nth-child(9)>div>img{
-    width: 20%;
-
+    width: 54%;
     position: absolute;
     top: 5vh;
     right: 0;
